--- a/forms.html
+++ b/forms.html
@@ -11,5 +11,6 @@
         <br>
         <input type="radio" name="answer" value=a2>Ні не можливі!<br>
         <p><input type="submit"></p>
+        </form>
 </body>
 </html>
