--- a/index.html
+++ b/index.html
@@ -51,5 +51,38 @@
        </tr>
        
     </table>
+    <h1>Топ 5 лучших смартфонов 2016 года</h1>
+    <ul>
+        <li>Google Pixel/Pixel XL</li>
+        <li>Honor 8</li>
+        <li> Apple iPhone 7 Plus</li>
+        <li>Xiaomi Redmi 4 Prime</li>
+        <li>OnePlus 3T</li>
+    </ul>
+        <h1>Топ 5 лучших смартфонов 2016 года</h1>
+    <ol type="a">
+        <li>Google Pixel/Pixel XL</li>
+        <li>Honor 8</li>
+        <li> Apple iPhone 7 Plus</li>
+        <li>Xiaomi Redmi 4 Prime</li>
+        <li>OnePlus 3T</li>
+    </ol>
+       <h1>Топ 5 лучших смартфонов 2016 года</h1>
+    <ol type="I">
+        <li>Google Pixel/Pixel XL</li>
+        <li>Honor 8</li>
+        <li> Apple iPhone 7 Plus</li>
+        <li>Xiaomi Redmi 4 Prime</li>
+        <li>OnePlus 3T</li>
+    </ol>
+       <h1>Топ 5 лучших смартфонов 2016 года</h1>
+    <ol type="A" reversed>
+        <li>Google Pixel/Pixel XL</li>
+        <li>Honor 8</li>
+        <li> Apple iPhone 7 Plus</li>
+        <li>Xiaomi Redmi 4 Prime</li>
+        <li>OnePlus 3T</li>
+    </ol>
+    
 </body>
 </html>
